[package]
name = "drawduel_wasm"
version = "1.0.0"
authors = ["pretzelhammer <7769424+pretzelhammer@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
prost = "0.13.0"
serde = "1.0.217"
serde-wasm-bindgen = "0.6.5"
drawduel_engine = { path = "../drawduel_engine" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--all-features"]
